--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,24 @@ main {
     width: 1200px;
     margin: 0 auto;
 }
+main ul {
+    list-style: none;
+}
+
+#lista-destinos ul li {
+    display: inline-block;
+    margin: 18px;
+}
+
+#lista-destinos ul h2 {
+    text-align: center;
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
